@@ -62,9 +62,9 @@ public class Main {
         long start = System.nanoTime();
         int projectCount = 0;
         for (File subsetDir : rawDataDir.listFiles()) {
-            if (!subsetDir.getName().equals("training")) {
-                continue;
-            }
+            // if (subsetDir.getName().equals("training")) {
+            // continue;
+            // }
             File input1SubsetDir = Paths.get(input1Dir.getAbsolutePath(), subsetDir.getName()).toFile();
             File[] projects = subsetDir.listFiles();
             LinkedList<String> projectNames1 = new LinkedList<>(Arrays.asList(projects).stream()
@@ -95,9 +95,10 @@ public class Main {
                 }
 
                 // java-med, java-large, java-large, java-large, java-large, java-large,
-                // java-large
-                List<String> ignoredProjectNames1 = Arrays.asList("apachehive", "GoogleCloudPlatformgooglecloudjava",
-                        "clementineplayerAndroidRemote", "oVirtovirtengine", "VUEVUE", "palatablelambda", "amututdw");
+                // java-large, java-large
+                List<String> ignoredProjectNames1 = List.of("apachehive", "GoogleCloudPlatformgooglecloudjava",
+                        "clementineplayerAndroidRemote", "oVirtovirtengine", "VUEVUE", "palatablelambda", "amututdw",
+                        "usethesourcecapsule");
 
                 if (ignoredProjectNames1.contains(formattedProjectName)) {
                     continue;
